@@ -4,12 +4,12 @@ import com.auth0.jwt.JWT;
 import com.auth0.jwt.algorithms.Algorithm;
 import com.auth0.jwt.interfaces.DecodedJWT;
 import jakarta.annotation.PostConstruct;
+import org.springframework.core.io.ClassPathResource;
 import org.springframework.stereotype.Service;
-import org.springframework.util.ResourceUtils;
 import org.springframework.util.StringUtils;
 
 import java.io.IOException;
-import java.nio.file.Files;
+import java.io.InputStream;
 import java.security.KeyFactory;
 import java.security.NoSuchAlgorithmException;
 import java.security.interfaces.RSAPublicKey;
@@ -43,15 +43,16 @@ public class TokenService {
     }
 
     private RSAPublicKey loadPublicKey(KeyFactory keyFactory) throws IOException, InvalidKeySpecException {
-        byte[] publicKeyBytes = Files.readAllBytes(
-                ResourceUtils.getFile("classpath:secret/token.pub").toPath());
-        String publicKeyContent = new String(publicKeyBytes)
+        try (InputStream inputStream = new ClassPathResource("secret/token.pub").getInputStream()) {
+            byte[] publicKeyBytes = inputStream.readAllBytes();
+            String publicKeyContent = new String(publicKeyBytes)
                 .replace("-----BEGIN PUBLIC KEY-----", "")
                 .replace("-----END PUBLIC KEY-----", "")
-                .replaceAll("\r", "")
-                .replaceAll("\n", "");
-        X509EncodedKeySpec keySpec = new X509EncodedKeySpec(Base64.getDecoder().decode(publicKeyContent));
-        return (RSAPublicKey) keyFactory.generatePublic(keySpec);
+                .replaceAll("\\r", "")
+                .replaceAll("\\n", "");
+            X509EncodedKeySpec keySpec = new X509EncodedKeySpec(Base64.getDecoder().decode(publicKeyContent));
+            return (RSAPublicKey) keyFactory.generatePublic(keySpec);
+        }
     }
 
     private String extractTokenFromHeader(String authorizationHeader) {
